--- a/app/src/main/res/layout/currency_rv_item.xml
+++ b/app/src/main/res/layout/currency_rv_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/idCVCurrency"
     android:layout_width="match_parent"
@@ -20,9 +19,11 @@
             android:id="@+id/idTVSymbol"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="2dp"
             android:layout_toStartOf="@id/idTVRate"
-            android:layout_toLeftOf="@id/idTVRate"
             android:padding="3dp"
             android:text="Symbol"
             android:textColor="@color/white"
@@ -34,7 +35,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/idTVSymbol"
-            android:layout_margin="2dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="2dp"
+            android:layout_toStartOf="@id/idTVPercentage"
             android:padding="3dp"
             android:text="Name"
             android:textColor="@color/white"
@@ -46,16 +51,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
             android:layout_marginStart="2dp"
-            android:layout_marginLeft="2dp"
             android:layout_marginTop="2dp"
             android:layout_marginEnd="3dp"
-            android:layout_marginRight="3dp"
             android:layout_marginBottom="2dp"
             android:padding="3dp"
             android:text="123456"
             android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/idTVPercentage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="27dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="2dp"
+            android:padding="3dp"
+            android:text="123456"
+            android:textColor="@color/white" />
+
 
     </RelativeLayout>
 
