--- a/app/src/main/res/layout/stockslist.xml
+++ b/app/src/main/res/layout/stockslist.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".MainActivity"
+    tools:context=".StocksList"
     >
 
     <!--edit text for searching our currency-->
@@ -20,7 +20,8 @@
         android:focusable="auto"
         android:hint="Search Stocks"
         android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white"
+    />
 
     <!--recycler view for displaying the list of currencies-->
     <androidx.recyclerview.widget.RecyclerView
@@ -39,16 +40,4 @@
         android:layout_centerInParent="true"
         android:visibility="gone"
     />
-
-    <Button
-        android:id="@+id/idOpenStocksList"
-        android:layout_width="75dp"
-        android:layout_height="80dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="40dp"
-        android:layout_marginEnd="40dp"
-        android:text="+" />
-
-
 </RelativeLayout>
